updated html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+.body {
+    background-color: lightslategray;
+}
+
+
 h1 {
     text-align: center;
     color: red;
@@ -9,7 +14,7 @@ p {
 }
 
 #instructions {
-    background-color: lightslategray;
+    background-color: white;
     margin: 10px;
     padding: 10px;
 }
